tests/machine/x/fortran/python_auto.f90
! Generated by Mochi compiler v0.10.25 on 2025-07-13T05:04:56Z
program python_auto
  implicit none
  print *, sqrt(16)
  print *, acos(-1.0)
  contains
end program python_auto
